add frontmatter support, QoL updates, remove pycache

--- a/theme.css
+++ b/theme.css
@@ -6,7 +6,7 @@
     --bg-secondary: #333333;
     --bg-tertiary: #555555;
 
-    --col-accent-primary: #b5cfff;
+    --col-accent-primary: #a4cdff;
     --bg-accent-primary: #0a54dc;
 
     --col-link: #4fa4ff;
