--- a/blog/blog_theme.css
+++ b/blog/blog_theme.css
@@ -6,6 +6,8 @@ img, video {
     max-width: 100%;
     display: block;
     margin: auto;
+    margin-top: 0.3em;
+    margin-bottom: 0.3em;
     text-align: center;
 }
 
@@ -24,7 +26,7 @@ pre {
     display: block;
     max-width: 80%;
     margin: auto;
-    margin-top: 0.3em;
+    margin-top: 0em;
     margin-bottom: 0.3em;
 
     text-align: center;
