--- a/blog/blog_theme.css
+++ b/blog/blog_theme.css
@@ -3,7 +3,7 @@ header {
 }
 
 img, video {
-    max-width: 100%;
+    max-width: 65%;
     display: block;
     margin: auto;
     margin-top: 0.3em;
@@ -20,6 +20,10 @@ pre {
     padding: 0.5em;
     border: 1px solid var(--col-secondary);
     border-radius: 6px;
+}
+
+li {
+    margin-bottom: 0.5em;
 }
 
 .media-caption {
